testing removal of a content box from the landing page

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <h2> temporary </h2>
 
 <a href = "/styleGuide.html"> style guide </a>
+<a href= "/testpage.html"> test index - removing a box </a>
 
 </html>
