altered folder structure & starting js collection process

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <title> placeholder </title>
 <h2> temporary </h2>
 
-<a href = "/styleGuide.html"> style guide </a>
+<a href = "/pages/styleGuide.html"> style guide </a>
 <br>
-<a href= "/testpage.html"> test index - removing a box </a>
+<a href= "/pages/testpage.html"> test index - removing a box </a>
 
 </html>
