--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <a href = "/pages/styleGuide.html"> style guide </a>
 <br>
 <br>
-<a href= "/dev/bio.html"> test page - dev </a>
+<a href= "/dev/index.html"> test page - dev </a>
 
 </html>
