blank target on image refs

--- a/dev/index.html
+++ b/dev/index.html
@@ -158,7 +158,7 @@ img.emoji {
 <div class = "post-content entry-content">
 
     <div id = "headshot" style = "width: 225px" class = "wp-caption aligncenter">
-        <a href = "https://www.linkedin.com/in/anthonynieszel">
+        <a href = "https://www.linkedin.com/in/anthonynieszel" target = "_blank">
         <img aria-describedby = "caption-headshot" loading = "lazy" class = "size-large wp-image-29"
         src = "/img/an1.jpg"
             alt = "It's me!"  title = "It's me!" width = "225" height = "225" /></a>
