changed layout of top ribbon

--- a/dev/index.html
+++ b/dev/index.html
@@ -123,7 +123,7 @@ img.emoji {
     <li id = "menu-item-6" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-6">
         <a href = "https://anthonynieszel.github.io/">Home</a></li>
     <li id = "menu-item-7" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-7">
-        <a href = "https://anthonynieszel.github.io/">About Me</a></li>        
+        <a href = "https://anthonynieszel.github.io/">Résumé</a></li>        
     <li id = "menu-item-8" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-8">
         <a href = "https://anthonynieszel.github.io/pages/portfolio/portfolio1.html">Work Portfolio</a></li>
     <li id = "menu-item-9" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-9">
