--- a/dev/index.html
+++ b/dev/index.html
@@ -94,7 +94,7 @@ img.emoji {
     <li id = "menu-item-1" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-1">
         <a href = "https://anthonynieszel.github.io/">Home</a></li>
     <li id = "menu-item-2" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-2">
-        <a href = "https://anthonynieszel.github.io/">About Me</a></li>        
+        <a href = "https://anthonynieszel.github.io/">Résumé</a></li>        
     <li id = "menu-item-3" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-3">
         <a href = "https://anthonynieszel.github.io/pages/portfolio/portfolio1.html">Work Portfolio</a></li>
     <li id = "menu-item-4" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-4">
